# vendetta

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  setup.cfg
.github/workflows/: test.yml
tests/: conftest.py  parse_csv.py
tests/data/: config.yaml  people.csv
tests/data/orders/: orders.csv  orders.yaml
tests/test_cli/: test_cli.py
tests/test_example/: test_some_function.py
tests/test_vendetta/: test_vendetta.py
vendetta/: __init__.py  cli.py  models.py  vendetta.py
